frontend/src/components/Navigation/SearchBar/SearchBar.css
#containerSB{ 
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: calc(var(--nbh) * 10);;
   height: var(--nbh);
   margin-left: 15px;
   
}

#formSB{ 
    display: flex;
    flex-direction: row;
    justify-content: space-around ;
    align-items: center;
    width: 100%;
    height: var(--bh);
    padding-left: 7px;
    border-radius: 6px;
    background-color: white;
    box-shadow: 0 5px 7px rgba(0, 0, 0, 0.3);
}



/* .rightSearchBar {
    display: flex;
    flex: 1;

    height:100%;
    margin: 0;
    border:none;
    border-radius:none;
 
    
} */


#buttonSB{
    display: flex;
    justify-content: center;
    align-items: center;

    height: var(--bh);
    width: calc(var(--bh) * 1.7);
    
    background-color: var(--two);
    color: white;
    border-radius: 0px 7px 7px 0px;
   
}

/* .SBInputWrap {
    width: 100%;
    height: 100%;
    */
/* } */
/* .inputSB1
{  
    display: flex;
    justify-content: center;
    align-items: center;
    border: none;
    outline: none;
    width: 100%;
    z-index: 1;
    
} */
.SBcontainer {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    width:100%;
    height:100%;
}



/* .searchBarContainer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    height: 40px; 
    background: white;   
     border-radius: 6px; 
} */
.SBcontainer11111111{
    display:flex;
    flex: 1;
    justify-content: center;
    align-items: center;
    background-color:yellowgreen

}
.SBInputWrap{
    display:flex;
    justify-content: center;
    align-items: center;
    /* margin-top: calc(var(--bh) * 0.2); */
  

}
.SBInput{
    /* display:flex;
    justify-content: center;
    align-items: center;
    background-color: green; */
    width: 170px;
    border: none;
    /* outline: none; */
    
}

.SBDropDown{
    /* position: absolute; */
    display:flex;
    align-items: center;
    color: white;
    font-style: italic;
    font-size: smaller;
    padding:10px;
    margin: 10px;
    border-radius: 14px;
    border: none;
    background-color: var(--two);
    margin-top: 30px;
}
.SBDropDown.hidden {
    display: none;
} 
#buttonSB{
    display: flex;
    justify-content: center;
    align-items: center;
    height: var(--bh);
    width: calc(var(--bh) * 1.7); 
    background-color: var(--two);
    color: white;
    border-radius: 0px 7px 7px 0px;  
}
/*////////////////??????????/////////////

/* .rightSearchBar {
    display: flex;
    flex: 1;

    height:100%;
    margin: 0;
    border:none;
    border-radius:none;
 
    
} */


.searchButton {
    display: flex;
    justify-content: center;
    align-items: center;
    height: var(--bh);
    width: 120px;
    background-color: var(--two);
    color: white;
    border-radius: 0px 6px 6px 0px;
}

.SBInputWrap {
    width: 100%;
    height: 100%;
    flex-grow: 1;
}
/* .SBInput {
    border: none;
    outline: none;

    
}
.SBDropDown{
    background-color: white;
    color: black;
    font-style: italic;
    font-size: smaller;
    padding:10px;
    margin: 10px;
    border-radius: 14px;

}
.SBDropDown.hidden {
    display: none;
}  */

/* <form className="searchBarContainer">
                <SearchBarTag
                    queryTag={queryTag}
                    selectTag={selectTag}
                    hideTagList={hideTagList}
                    handleTagSearchEvent={handleTagSearchEvent}
                    handleTagListClick={handleTagListClick}
                    filterTags={filterTags}
                /> */

